# blog

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Dockerfile  Procfile  README.md  build.rs  bun.lockb  compose.yml  fly.toml  next.config.js  next.config.mjs  package.json  theme.config.tsx  wrangler.toml
.do/: app.yaml  deploy.template.yaml
.github/workflows/: deploy.yml  docker.yml
app/: _meta.global.js  layout.jsx  page.mdx
app/[[...mdxPath]]/: page.jsx
app/blog/: get-blog-posts.js  page.jsx
app/blog/blog-of-blogs/: page.mdx
app/blog/draft/: page.mdx
app/blog/getting-out-of-the-way/: page.mdx
app/posts/other-writers/: page.mdx
app/posts/software/: page.mdx
app/rss.xml/: route.js
app/tags/[tag]/: page.jsx
assets/: search.js  styles.css  theme.js
content/: _meta.global.js
content2/: index.mdx  other-writers.mdx
docs/: README.md
pages/: _meta.json  example.mdx  index.mdx  index2.mdx  other-writers.mdx  recipes.mdx  software.mdx
pages/blog/blog-of-blogs/: page.mdx
pages/blog/draft/: page.mdx
pages/blog/getting-out-of-the-way/: page.mdx
pages/blog/making-a-game-in-bevy/1/: page.mdx
pages/blog/shortening-the-feedback-loop/: page.mdx
pages/blog/software/: page.mdx
pages/recipes/: test-recipe.mdx
pages/software/: notes-on-systems.mdx
src/: constants.rs  error.rs  handler.rs  lib.rs  main.rs  mdx_options.rs  meta.rs  page.rs  post.rs  redirects.rs  store.rs  template.rs
templates/: base.html
