[package]
name = "blog"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.102"
console_error_panic_hook = "0.1"
markdown = "1.0.0"
maud = "0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
worker = "0.5"
